# icelang

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  grammar.ebnf  to-do.md
.github/workflows/: rust.yml  tests.yml
docs/: Getting Started.md  Guidebook.md  grammar.ebnf
examples/: bf.ice  cat.ice  echo_args.ice  fib.ice  fileio.ice
src/: README.md  call_stack.rs  function.rs  ice_error.rs  ice_type.rs  icelang_error.rs  icelang_type.rs  interpreter.rs  keyword.rs  lexer.rs  lib.rs  parser.rs  runtime_state.rs  source_range.rs  symbol_table.rs  test_utils.rs  token.rs  value.rs
src/ast/: assignment_kind.rs  ast_node.rs  ast_node_assignment.rs  ast_node_binary_operation.rs  ast_node_comparison.rs  ast_node_computed_member_access.rs  ast_node_dict_literal.rs  ast_node_dot_member_access.rs  ast_node_for_loop.rs  ast_node_format.rs  ast_node_formatted_string_literal.rs  ast_node_function_call.rs  ast_node_function_declaration.rs  ast_node_if_else_statement.rs  ast_node_inline_conditional.rs  ast_node_jump_statement.rs  ast_node_list_literal.rs  ast_node_literal.rs  ast_node_match_statement.rs  ast_node_simple_loop.rs  ast_node_type_cast.rs  ast_node_unary_operation.rs  ast_node_usage_suffix.rs  ast_node_variable_access.rs  ast_node_variable_declaration.rs  ast_node_while_loop.rs  ast_struct.rs  binary_operation_kind.rs  comparison_kind.rs  generic_ast_node.rs  jump_statement_kind.rs  match_arm.rs  mod.rs  unary_operation_kind.rs  usage_suffix.rs
src/error/: error_formatting.rs  lexer_error.rs  mod.rs  parse_error.rs  runtime_error.rs
src/icelang_std_lib/: collections.rs  error.rs  icelang_fmt.rs  io.rs  misc.rs  mod.rs  std_lib_function.rs  string.rs  time.rs
src/interpreter/: assignments.rs  binary_operations.rs  casting.rs  comparisons.rs  control_flow.rs  core.rs  functions.rs  inline_conditionals.rs  jump_statement.rs  literals.rs  member_access.rs  mod.rs  operations.rs  runtime_result.rs  unary_operations.rs  variables.rs
src/token/: generic_token.rs  mod.rs  token_formatted_string_literal_section.rs  token_ident.rs  token_keyword.rs  token_literal.rs  token_punctuator.rs
