[package]
name = "icelang"
version = "0.1.0"
authors = ["Isaac Chen"]
description = "A simple and high-level programming language created for the purpose of learning about programming language design and implementation."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ijchen/icelang"
documentation = "https://docs.rs/icelang"
edition = "2021"
include = ["src/", "Cargo.toml", "README.md", "LICENSE-*"]
publish = false

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rustyline = "11.0.0"
typed-arena = "2.0.2"
clearscreen = "2.0.1"
static_assertions = "1.1.0"
enum-iterator = "1.4.0"
ordered-float = "3.6.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
lto = "thin" # TODO: benchmark what setting is best here

[profile.test]
opt-level = 3           # Enable optimizations
debug-assertions = true # This is the default value, but make it clear we care
overflow-checks = true  # This is the default value, but make it clear we care
